CSS: fix image not showing problem

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/1.png);
+    background-image: url(./images/1.png);
 }
 
 .timeline-cards .card:nth-child(2)::before {
@@ -135,7 +135,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/2.png);
+    background-image: url(./images/2.png);
 }
 
 .timeline-cards .card:nth-child(3)::before {
@@ -145,7 +145,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/3.png);
+    background-image: url(./images/3.png);
 }
 
 .timeline-cards .card:nth-child(4)::before {
@@ -156,7 +156,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/4.png);
+    background-image: url(./images/4.png);
 }
 
 .timeline-cards .card:nth-child(5)::before {
@@ -166,7 +166,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/5.png);
+    background-image: url(./images/5.png);
 }
 
 .timeline-cards .card:nth-child(6)::before {
@@ -177,7 +177,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/6.png);
+    background-image: url(./images/6.png);
 }
 
 .timeline-cards .card:nth-child(7)::before {
@@ -187,7 +187,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/7.png);
+    background-image: url(./images/7.png);
 }
 
 .timeline-cards .card:nth-child(8)::before {
@@ -198,7 +198,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/cs.png);
+    background-image: url(./images/cs.png);
 }
 
 .timeline-cards .card:nth-child(9)::before {
@@ -208,7 +208,7 @@ body {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-image: url(/images/cs2.png);
+    background-image: url(./images/cs2.png);
 }
 
 /* Timeline center bar */
